refactor away Species.isCosmeticReplacement() & .isActuallyCosmetic()