@@ -304,8 +304,7 @@ public class StarterRandomizer extends Randomizer {
             if (banIrregularAltFormes) {
                 available.removeAll(romHandler.getIrregularFormes());
             }
-            available.removeIf(Species::isCosmeticReplacement);
-            available.removeIf(Species::isActuallyCosmetic);
+            available.removeIf(Species::isEssentiallyCosmetic);
         } else {
             available = new SpeciesSet(noLegendaries ? rSpecService.getNonLegendaries(false) : rSpecService.getAll(false));
         }
@@ -339,8 +338,8 @@ public class StarterRandomizer extends Randomizer {
         List<Species> customStarters = new ArrayList<>();
         List<Species> romSpecies = romHandler.getSpeciesInclFormes()
                 .stream()
-                .filter(pk -> pk == null || !pk.isCosmeticReplacement())
-                .collect(Collectors.toList());
+                .filter(pk -> pk == null || !pk.isEssentiallyCosmetic())
+                .toList();
 
         for (int customStarter : starterIndices) {
             if (!(customStarter == 0)) {
